Endpoints added in Swagger and Models Updated
